[tool.poetry]
name = "belbin"
version = "0.1.0"
description = ""
authors = ["gertct <harkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
streamlit-float = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
